<resources>
    <string name="app_name">RTBitcoinWidget</string>
    <string name="app_desc">Real-Time Bitcoin Value</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="refresh_interval_titles">refresh_interval_titles</string>
    <string name="refresh_interval_values">refresh_interval_values</string>

    <string name="configureWidget">Configure your widget</string>

    <string name="selectCurrency">Select the currency</string>
    <string name="currency">Currency</string>
    <string name="cur_canadian">Canadian (CA)</string>
    <string name="cur_american">American (US)</string>
    <string name="cur_european">European (EU)</string>

    <string name="selectFrequency">Select the update frequency</string>
    <string name="frequency">Frequency</string>
    <string name="freq_15">15 minutes</string>
    <string name="freq_30">30 minutes</string>
    <string name="freq_45">45 minutes</string>
    <string name="freq_60">60 minutes</string>
</resources>
