<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:summary="@string/app_desc" />

    <ListPreference
        android:defaultValue="60"
        android:entries="@string/frequency"
        android:entryValues="@array/frequencies"
        android:key="interval_pref"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="Refresh interval" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="tts_pref"
        android:summary="Listen to words and their meanings"
        android:title="Enable Text-to-speech" />


    <SelectBoxPreference
        android:defaultValue="CAN"
        android:entries="@string/currency"
        android:entryValues="@array/currencies"
        android:key="tts_pref"
        android:summary="Listen to words and their meanings"
        android:title="Enable Text-to-speech" />





</PreferenceScreen>