<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignRight="@+id/textView3"
        android:backgroundTint="@android:color/darker_gray"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/configureWidget"
        android:textStyle="bold"
        tools:textSize="30sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/selectCurrency"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_above="@+id/textView2"
        android:layout_toEndOf="@+id/radioGroup"
        android:layout_toRightOf="@+id/radioGroup"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="0dp"
        android:paddingTop="0dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:text="Currency" />

        <RadioGroup
            android:id="@+id/rbg_cur"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/rb_cur_can"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="CAN" />

            <RadioButton
                android:id="@+id/rb_cur_usd"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="USD" />

            <RadioButton
                android:id="@+id/rb_cur_eur"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="EUR" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/selectFrequency"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:text="Update frequency" />

        <RadioGroup
            android:id="@+id/rbg_fre"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/rb_freq_15"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight="1"
                android:text="15 min" />

            <RadioButton
                android:id="@+id/rb_freq_30"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight="1"
                android:text="30 min" />

            <RadioButton
                android:id="@+id/rb_freq_45"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight="1"
                android:text="45 min" />

            <RadioButton
                android:id="@+id/rb_freq_60"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight="1"
                android:text="60 min" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="242dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/okButton"
            android:layout_width="230dp"
            android:layout_height="85dp"
            android:layout_alignEnd="@+id/textView3"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/textView3"
            android:text="Save configuration"
            android:textColor="#FFFFFF" />
    </LinearLayout>


</LinearLayout>